[gd_scene load_steps=60 format=3 uid="uid://dh8cc8c8uvsyd"]

[ext_resource type="Script" path="res://addons/ac_engine/scripts/combat_unit.gd" id="1_nsrh3"]
[ext_resource type="Texture2D" uid="uid://uftbhr7yj2hf" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_000.png" id="2_u4qyg"]
[ext_resource type="Texture2D" uid="uid://hg2i1esajc3e" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_001.png" id="3_juabr"]
[ext_resource type="Texture2D" uid="uid://b284h77hdch00" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_002.png" id="4_58pcx"]
[ext_resource type="Texture2D" uid="uid://cgm010kkreq4j" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_003.png" id="5_nx8nd"]
[ext_resource type="Texture2D" uid="uid://boqq025pk52yc" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_004.png" id="6_1lq5m"]
[ext_resource type="Texture2D" uid="uid://dg0y4cfgmrcvu" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_005.png" id="7_esmbi"]
[ext_resource type="Texture2D" uid="uid://cqrxq27l11s7x" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_006.png" id="8_30h6u"]
[ext_resource type="Texture2D" uid="uid://cn3eqpwwew0pv" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_007.png" id="9_w7r4p"]
[ext_resource type="Texture2D" uid="uid://57jajae1llqj" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_008.png" id="10_7hiwu"]
[ext_resource type="Texture2D" uid="uid://qn54orvop22u" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_009.png" id="11_gy3a2"]
[ext_resource type="Texture2D" uid="uid://3rs6l6bowti3" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_010.png" id="12_gfexx"]
[ext_resource type="Texture2D" uid="uid://b5icdk1nioj6m" path="res://assets/sprites/ogre/attack/0_Ogre_Slashing_011.png" id="13_wtadc"]
[ext_resource type="Texture2D" uid="uid://bkhedcm2efckl" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_000.png" id="14_olm5p"]
[ext_resource type="Texture2D" uid="uid://d0n0m228f5u78" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_001.png" id="15_ogb8i"]
[ext_resource type="Texture2D" uid="uid://bmf6xvi4wpyb3" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_002.png" id="16_vmlyq"]
[ext_resource type="Texture2D" uid="uid://b1c2xvkra502t" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_003.png" id="17_qs7xu"]
[ext_resource type="Texture2D" uid="uid://b5yuwlajltj55" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_004.png" id="18_yq5xf"]
[ext_resource type="Texture2D" uid="uid://cx1a81jvdmc2w" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_005.png" id="19_6djpt"]
[ext_resource type="Texture2D" uid="uid://b7r0jkjbbg5ao" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_006.png" id="20_w2vvb"]
[ext_resource type="Texture2D" uid="uid://ccdy3qojqpsk5" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_007.png" id="21_sinox"]
[ext_resource type="Texture2D" uid="uid://b6510exv80p4l" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_008.png" id="22_4ukln"]
[ext_resource type="Texture2D" uid="uid://c6upa1yr2k0uv" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_009.png" id="23_61uul"]
[ext_resource type="Texture2D" uid="uid://r2y31q6lb5t0" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_010.png" id="24_cv41f"]
[ext_resource type="Texture2D" uid="uid://dwuq6ou56uuwr" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_011.png" id="25_y3mia"]
[ext_resource type="Texture2D" uid="uid://bpk8xg1dmn2f" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_012.png" id="26_22y63"]
[ext_resource type="Texture2D" uid="uid://om3dj6u8ps8i" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_013.png" id="27_kthwe"]
[ext_resource type="Texture2D" uid="uid://1m24qyhwrxl7" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_014.png" id="28_r1j5d"]
[ext_resource type="Texture2D" uid="uid://daultlbi07sfb" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_015.png" id="29_7qgvc"]
[ext_resource type="Texture2D" uid="uid://6ve5sk0skum4" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_016.png" id="30_20vmv"]
[ext_resource type="Texture2D" uid="uid://c5mmv55mtkstw" path="res://assets/sprites/ogre/idle/0_Ogre_Idle_017.png" id="31_xqtjx"]
[ext_resource type="Texture2D" uid="uid://bsipr6yrl04s2" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_000.png" id="32_vmgpj"]
[ext_resource type="Texture2D" uid="uid://ca3o3arvrgnxs" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_001.png" id="33_5xob1"]
[ext_resource type="Texture2D" uid="uid://bshcophw4pj67" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_002.png" id="34_h8rmu"]
[ext_resource type="Texture2D" uid="uid://7c8eppxq32l7" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_003.png" id="35_kjqjy"]
[ext_resource type="Texture2D" uid="uid://d1kx1lkkpl43r" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_004.png" id="36_5anls"]
[ext_resource type="Texture2D" uid="uid://dx07p53aiu61m" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_005.png" id="37_411k1"]
[ext_resource type="Texture2D" uid="uid://t1uq58pmrkcl" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_006.png" id="38_vi4a4"]
[ext_resource type="Texture2D" uid="uid://bfoih31ky440j" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_007.png" id="39_psh8s"]
[ext_resource type="Texture2D" uid="uid://ckmonkm3cfsfs" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_008.png" id="40_ihn0g"]
[ext_resource type="Texture2D" uid="uid://bvumh3qi2afq7" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_009.png" id="41_j7kfm"]
[ext_resource type="Texture2D" uid="uid://ck5wvibpah25y" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_010.png" id="42_svaqq"]
[ext_resource type="Texture2D" uid="uid://cll2hy1dvf6lj" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_011.png" id="43_1bm56"]
[ext_resource type="Texture2D" uid="uid://byc5f6htjnsav" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_012.png" id="44_mac3v"]
[ext_resource type="Texture2D" uid="uid://d21xdilp3o2h7" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_013.png" id="45_p2trk"]
[ext_resource type="Texture2D" uid="uid://mrit31vlnqxb" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_014.png" id="46_2adk4"]
[ext_resource type="Texture2D" uid="uid://dboagjexefvyc" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_015.png" id="47_bh2we"]
[ext_resource type="Texture2D" uid="uid://cxjl346kgdx62" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_016.png" id="48_ojw3g"]
[ext_resource type="Texture2D" uid="uid://5o0ij2ab85k2" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_017.png" id="49_pt7ox"]
[ext_resource type="Texture2D" uid="uid://bms1n5bji0ovp" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_018.png" id="50_ktawv"]
[ext_resource type="Texture2D" uid="uid://b2e0qnghctmtn" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_019.png" id="51_osqpg"]
[ext_resource type="Texture2D" uid="uid://hwq8tqj4shmq" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_020.png" id="52_pdw8q"]
[ext_resource type="Texture2D" uid="uid://jikuoachqr0l" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_021.png" id="53_dmwpv"]
[ext_resource type="Texture2D" uid="uid://dgval37i58q3n" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_022.png" id="54_6anfn"]
[ext_resource type="Texture2D" uid="uid://c2b5v3khpobcq" path="res://assets/sprites/ogre/walk/0_Ogre_Walking_023.png" id="55_tp05i"]

[sub_resource type="SpriteFrames" id="SpriteFrames_av10p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_u4qyg")
}, {
"duration": 1.0,
"texture": ExtResource("3_juabr")
}, {
"duration": 1.0,
"texture": ExtResource("4_58pcx")
}, {
"duration": 1.0,
"texture": ExtResource("5_nx8nd")
}, {
"duration": 1.0,
"texture": ExtResource("6_1lq5m")
}, {
"duration": 1.0,
"texture": ExtResource("7_esmbi")
}, {
"duration": 1.0,
"texture": ExtResource("8_30h6u")
}, {
"duration": 1.0,
"texture": ExtResource("9_w7r4p")
}, {
"duration": 1.0,
"texture": ExtResource("10_7hiwu")
}, {
"duration": 1.0,
"texture": ExtResource("11_gy3a2")
}, {
"duration": 1.0,
"texture": ExtResource("12_gfexx")
}, {
"duration": 1.0,
"texture": ExtResource("13_wtadc")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_olm5p")
}, {
"duration": 1.0,
"texture": ExtResource("15_ogb8i")
}, {
"duration": 1.0,
"texture": ExtResource("16_vmlyq")
}, {
"duration": 1.0,
"texture": ExtResource("17_qs7xu")
}, {
"duration": 1.0,
"texture": ExtResource("18_yq5xf")
}, {
"duration": 1.0,
"texture": ExtResource("19_6djpt")
}, {
"duration": 1.0,
"texture": ExtResource("20_w2vvb")
}, {
"duration": 1.0,
"texture": ExtResource("21_sinox")
}, {
"duration": 1.0,
"texture": ExtResource("22_4ukln")
}, {
"duration": 1.0,
"texture": ExtResource("23_61uul")
}, {
"duration": 1.0,
"texture": ExtResource("24_cv41f")
}, {
"duration": 1.0,
"texture": ExtResource("25_y3mia")
}, {
"duration": 1.0,
"texture": ExtResource("26_22y63")
}, {
"duration": 1.0,
"texture": ExtResource("27_kthwe")
}, {
"duration": 1.0,
"texture": ExtResource("28_r1j5d")
}, {
"duration": 1.0,
"texture": ExtResource("29_7qgvc")
}, {
"duration": 1.0,
"texture": ExtResource("30_20vmv")
}, {
"duration": 1.0,
"texture": ExtResource("31_xqtjx")
}],
"loop": true,
"name": &"idle",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_vmgpj")
}, {
"duration": 1.0,
"texture": ExtResource("33_5xob1")
}, {
"duration": 1.0,
"texture": ExtResource("34_h8rmu")
}, {
"duration": 1.0,
"texture": ExtResource("35_kjqjy")
}, {
"duration": 1.0,
"texture": ExtResource("36_5anls")
}, {
"duration": 1.0,
"texture": ExtResource("37_411k1")
}, {
"duration": 1.0,
"texture": ExtResource("38_vi4a4")
}, {
"duration": 1.0,
"texture": ExtResource("39_psh8s")
}, {
"duration": 1.0,
"texture": ExtResource("40_ihn0g")
}, {
"duration": 1.0,
"texture": ExtResource("41_j7kfm")
}, {
"duration": 1.0,
"texture": ExtResource("42_svaqq")
}, {
"duration": 1.0,
"texture": ExtResource("43_1bm56")
}, {
"duration": 1.0,
"texture": ExtResource("44_mac3v")
}, {
"duration": 1.0,
"texture": ExtResource("45_p2trk")
}, {
"duration": 1.0,
"texture": ExtResource("46_2adk4")
}, {
"duration": 1.0,
"texture": ExtResource("47_bh2we")
}, {
"duration": 1.0,
"texture": ExtResource("48_ojw3g")
}, {
"duration": 1.0,
"texture": ExtResource("49_pt7ox")
}, {
"duration": 1.0,
"texture": ExtResource("50_ktawv")
}, {
"duration": 1.0,
"texture": ExtResource("51_osqpg")
}, {
"duration": 1.0,
"texture": ExtResource("52_pdw8q")
}, {
"duration": 1.0,
"texture": ExtResource("53_dmwpv")
}, {
"duration": 1.0,
"texture": ExtResource("54_6anfn")
}, {
"duration": 1.0,
"texture": ExtResource("55_tp05i")
}],
"loop": true,
"name": &"walk",
"speed": 30.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydldg"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2iubv"]
bg_color = Color(0, 0.713726, 0.266667, 1)

[sub_resource type="Theme" id="Theme_82okd"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_ydldg")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_2iubv")

[node name="AcCombatUnit" type="Node2D"]
script = ExtResource("1_nsrh3")

[node name="UnitAnisprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_av10p")
animation = &"attack"

[node name="UnitAvatar" type="Sprite2D" parent="."]

[node name="UnitTimer" type="Timer" parent="."]

[node name="UnitHpBar" type="ProgressBar" parent="."]
offset_left = 192.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 128.0
theme = SubResource("Theme_82okd")
rounded = true
show_percentage = false
metadata/_edit_use_anchors_ = true
